--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=800, user-scalable=no">
     <title>Welcome!</title>
     
 </head>
@@ -59,3 +59,4 @@
     
 </body>
 </html>
+
